--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "Rugby Scout Server",
+  "name": "server",
   "version": "1.0.0",
   "description": "API Server",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "DEBUG=express:router nodemon index.js"
   },
   "author": "Sharon Miller, Connor Crossley, Alex Hanson",
   "license": "ISC",
   "dependencies": {
     "babel": "^6.23.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "register": "0.0.0"
@@ -18,6 +20,7 @@
     "babel-env": "^2.4.1",
     "babel-eslint": "^10.0.1",
     "babel-register": "^6.26.0",
-    "eslint": "^5.6.1"
+    "eslint": "^5.6.1",
+    "morgan": "^1.9.1"
   }
 }
