--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,7 +4,8 @@
   "description": "Oauth Web Server",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "DEBUG=express:router nodemon index.js"
   },
   "author": "Sharon Miller, Connor Crossley, Alex Hanson",
   "license": "ISC",
@@ -14,5 +15,9 @@
     "babel-register": "^6.26.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "cors": "^2.8.4",
+    "morgan": "^1.9.1"
   }
 }
