--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "babel-eslint": "^10.0.1",
     "babel-register": "^6.26.0",
     "eslint": "^5.6.1",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.3.0",
+    "morgan": "^1.9.1",
+    "superagent": "^4.0.0-beta.5"
   }
 }
