--- a/web-server/package.json
+++ b/web-server/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "cors": "^2.8.4",
+    "eslint": "^5.6.1",
+    "mongoose": "^5.3.0",
     "morgan": "^1.9.1"
   }
 }
